PLT-338 Security group for internet access (#120)
## 🎫 Ticket

https://jira.cms.gov/browse/PLT-338

## 🛠 Changes

Switched zscaler-security-groups to service-security-groups in terraform
services and added a security group for internet access. Also extended
plan and apply of these security groups to include ab2d and dpc mgmt
environments.

## ℹ️ Context

In working on Packer issues I realized we had no standard security group
for internet egress. The service-security-groups terraform service
should also be useful for adding other general-purpose security groups.

## 🧪 Validation

See plans in checks.

--- a/.github/workflows/service-security-groups-apply.yml
+++ b/.github/workflows/service-security-groups-apply.yml
@@ -1,12 +1,12 @@
-name: zscaler-security-groups apply terraform
+name: service-security-groups apply terraform
 
 on:
   push:
     branches:
       - main
     paths:
-      - .github/workflows/zscaler-security-groups-apply.yml
-      - terraform/services/zscaler-security-groups/**
+      - .github/workflows/service-security-groups-apply.yml
+      - terraform/services/service-security-groups/**
   workflow_dispatch: # Allow manual trigger
 
 jobs:
@@ -17,15 +17,12 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./terraform/services/zscaler-security-groups
+        working-directory: ./terraform/services/service-security-groups
     strategy:
       fail-fast: false
       matrix:
         app: [ab2d, bcda, dpc]
-        env: [dev, test, sbx, prod]
-        include:
-          - app: bcda
-            env: mgmt
+        env: [dev, test, sbx, prod, mgmt]
     steps:
       - uses: actions/checkout@v4
       - uses: ./actions/setup-tfenv-terraform
