--- a/.github/workflows/service-security-groups-plan.yml
+++ b/.github/workflows/service-security-groups-plan.yml
@@ -1,10 +1,10 @@
-name: zscaler-security-groups plan terraform
+name: service-security-groups plan terraform
 
 on:
   pull_request:
     paths:
-      - .github/workflows/zscaler-security-groups-plan.yml
-      - terraform/services/zscaler-security-groups/**
+      - .github/workflows/service-security-groups-plan.yml
+      - terraform/services/service-security-groups/**
   workflow_dispatch: # Allow manual trigger
 
 jobs:
@@ -13,7 +13,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: ./actions/setup-tfenv-terraform
-      - run: terraform fmt -check -diff -recursive terraform/services/zscaler-security-groups
+      - run: terraform fmt -check -diff -recursive terraform/services/service-security-groups
 
   terraform-plan:
     needs: check-terraform-fmt
@@ -23,15 +23,12 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./terraform/services/zscaler-security-groups
+        working-directory: ./terraform/services/service-security-groups
     strategy:
       fail-fast: false
       matrix:
         app: [ab2d, bcda, dpc]
-        env: [dev, test, sbx, prod]
-        include:
-          - app: bcda
-            env: mgmt
+        env: [dev, test, sbx, prod, mgmt]
     steps:
       - uses: actions/checkout@v4
       - uses: ./actions/setup-tfenv-terraform
