--- a/.github/workflows/api-waf-apply.yml
+++ b/.github/workflows/api-waf-apply.yml
@@ -24,6 +24,9 @@ jobs:
       matrix:
         app: [dpc]
         env: [dev, test, sbx]
+        include:
+          - app: bcda
+            env: dev
     steps:
       - uses: actions/checkout@v4
       - uses: ./actions/setup-tfenv-terraform
