--- a/.github/workflows/api-rds-apply.yml
+++ b/.github/workflows/api-rds-apply.yml
@@ -1,22 +1,16 @@
-name: api-rds plan terraform
+name: api-rds apply terraform
 
 on:
-  pull_request:
+  push:
+    branches:
+      - main
     paths:
-      - .github/workflows/api-rds-plan.yml
+      - .github/workflows/api-rds-apply.yml
       - terraform/services/api-rds/**
   workflow_dispatch: # Allow manual trigger
 
 jobs:
-  check-terraform-fmt:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: ./actions/setup-tfenv-terraform
-      - run: terraform fmt -check -diff -recursive terraform/services/api-rds
-
-  terraform-plan:
-    needs: check-terraform-fmt
+  terraform-apply:
     permissions:
       contents: read
       id-token: write
@@ -27,7 +21,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        app: [ab2d, bcda, dpc]
+        app: [ab2d]
         env: [dev, test, sbx, prod]
     steps:
       - uses: actions/checkout@v4
@@ -37,7 +31,7 @@ jobs:
           role-to-assume: arn:aws:iam::${{ matrix.app == 'ab2d' && secrets[format('{0}_{1}_ACCOUNT', matrix.app, matrix.env)] || secrets.BCDA_ACCOUNT }}:role/delegatedadmin/developer/${{ matrix.app }}-${{ matrix.env }}-github-actions
           aws-region: ${{ vars.AWS_REGION }}
       - run: terraform init -backend-config=../../backends/${{ matrix.app }}-${{ matrix.env }}.s3.tfbackend
-      - run: terraform plan
+      - run: terraform apply -auto-approve
         env:
           TF_VAR_app: ${{ matrix.app }}
           TF_VAR_env: ${{ matrix.env }}
