--- a/.github/workflows/github-actions-runner-images.yml
+++ b/.github/workflows/github-actions-runner-images.yml
@@ -32,6 +32,7 @@ jobs:
             PKR_VAR_s3_tarball=/github-runner/s3-tarball
             PKR_VAR_vpc_id=/github-runner/vpc
             PKR_VAR_subnet_id=/github-runner/subnet
+            PKR_VAR_temporary_security_group_source_cidrs=/github-runner/cidrs
       - env:
           PACKER_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
