--- a/.github/workflows/github-actions-runner-images.yml
+++ b/.github/workflows/github-actions-runner-images.yml
@@ -36,6 +36,7 @@ jobs:
       - env:
           PACKER_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
+          session-manager-plugin # TODO Remove after testing
           packer init .
           packer validate -evaluate-datasources .
           ${RUNNER_DEBUG:+"PACKER_LOG=1"} packer build .
