--- a/.github/workflows/github-actions-runner-images.yml
+++ b/.github/workflows/github-actions-runner-images.yml
@@ -33,11 +33,13 @@ jobs:
             PKR_VAR_vpc_id=/github-runner/vpc
             PKR_VAR_subnet_id=/github-runner/subnet
             RUNNER_CIDRS=/github-runner/cidrs
-      - env:
+      - name: packer build
+        env:
           PACKER_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           # CIDRs must be set in a variables file since they're a list
           echo "temporary_security_group_source_cidrs=$RUNNER_CIDRS" > variables.pkrvars.hcl
+          cat variables.pkrvars.hcl
 
           packer init .
           packer validate -evaluate-datasources .
