--- a/.github/workflows/github-actions-runner-images.yml
+++ b/.github/workflows/github-actions-runner-images.yml
@@ -32,15 +32,11 @@ jobs:
             PKR_VAR_s3_tarball=/github-runner/s3-tarball
             PKR_VAR_vpc_id=/github-runner/vpc
             PKR_VAR_subnet_id=/github-runner/subnet
-            RUNNER_CIDRS=/github-runner/cidrs
+            PKR_VAR_security_group_id=/github-runner/security-group
       - name: packer build
         env:
           PACKER_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          # CIDRs must be set in a variables file since they're a list
-          echo "temporary_security_group_source_cidrs=$RUNNER_CIDRS" > variables.pkrvars.hcl
-          cat variables.pkrvars.hcl
-
           packer init .
           packer validate -evaluate-datasources .
-          ${RUNNER_DEBUG:+"PACKER_LOG=1"} packer build -var-file=variables.pkrvars.hcl .
+          ${RUNNER_DEBUG:+"PACKER_LOG=1"} packer build .
