--- a/.github/workflows/api-rds-apply.yml
+++ b/.github/workflows/api-rds-apply.yml
@@ -40,3 +40,4 @@ jobs:
       - run: terraform apply -auto-approve
         env:
           TF_VAR_app: ${{ matrix.app }}
+          TF_VAR_env: ${{ matrix.env }}
