move dpc env to matrix

--- a/.github/workflows/api-waf-apply.yml
+++ b/.github/workflows/api-waf-apply.yml
@@ -23,12 +23,10 @@ jobs:
       fail-fast: false
       matrix:
         app: [dpc]
-        env: [dev, test, sbx]
+        env: [dev, test, sbx, prod]
         include:
           - app: bcda
             env: dev
-          - app: dpc
-            env: prod
     steps:
       - uses: actions/checkout@v4
       - uses: ./actions/setup-tfenv-terraform
