--- a/.github/workflows/github-actions-runner-images.yml
+++ b/.github/workflows/github-actions-runner-images.yml
@@ -38,6 +38,7 @@ jobs:
       - name: packer build
         env:
           PACKER_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          TMPDIR: /home/ec2-user/
         run: |
           packer init .
           # Security groups must be set by flag since they're a list
