--- a/.github/workflows/aws-params-env-action-check-dist.yml
+++ b/.github/workflows/aws-params-env-action-check-dist.yml
@@ -31,6 +31,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Clean dist directory
+        run: rm -rf dist/
+
       - name: Rebuild the dist/ directory
         run: |
           npm run build
