--- a/.github/workflows/quicksight-apply.yml
+++ b/.github/workflows/quicksight-apply.yml
@@ -1,12 +1,12 @@
-name: dpc-quicksights apply terraform
+name: quicksight apply terraform
 
 on:
   push:
     branches:
       - main
     paths:
-      - .github/workflows/dpc-quicksights-apply.yml
-      - terraform/services/dpc-quicksights/**
+      - .github/workflows/quicksight-apply.yml
+      - terraform/services/quicksight/**
 #      - terraform/modules/athena/**
 #      - terraform/modules/glue/**
 #      - terraform/modules/firehose/**
@@ -19,7 +19,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: ./actions/setup-tfenv-terraform
-      - run: terraform fmt -check -diff -recursive terraform/services/dpc-quicksights
+      - run: terraform fmt -check -diff -recursive terraform/services/quicksight
 
   terraform-apply:
     needs: check-terraform-fmt
@@ -29,7 +29,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./terraform/services/dpc-quicksights
+        working-directory: ./terraform/services/quicksight
     strategy:
       fail-fast: false
       matrix:
