--- a/.github/workflows/quicksight-plan.yml
+++ b/.github/workflows/quicksight-plan.yml
@@ -1,10 +1,10 @@
-name: dpc-quicksights plan terraform
+name: quicksight plan terraform
 
 on:
   pull_request:
     paths:
-      - .github/workflows/dpc-quicksights-plan.yml
-      - terraform/services/dpc-quicksights/**
+      - .github/workflows/quicksight-plan.yml
+      - terraform/services/quicksight/**
 #      - terraform/modules/athena/**
 #      - terraform/modules/glue/**
 #      - terraform/modules/firehose/**
@@ -17,7 +17,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: ./actions/setup-tfenv-terraform
-      - run: terraform fmt -check -diff -recursive terraform/services/dpc-quicksights
+      - run: terraform fmt -check -diff -recursive terraform/services/quicksight
 
   terraform-plan:
     needs: check-terraform-fmt
@@ -27,7 +27,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./terraform/services/dpc-quicksights
+        working-directory: ./terraform/services/quicksight
     strategy:
       fail-fast: false
       matrix:
