--- a/.github/workflows/api-rds-apply.yml
+++ b/.github/workflows/api-rds-apply.yml
@@ -22,7 +22,7 @@ jobs:
       fail-fast: false
       matrix:
         app: [ab2d]
-        env: [dev, test]
+        env: [dev, test, sbx, prod]
     steps:
       - uses: actions/checkout@v4
       - uses: ./actions/setup-tfenv-terraform
