PLT-634: Add DPC PROD env to WAF apply (#133)
## 🎫 Ticket

https://jira.cms.gov/browse/PLT-634

## 🛠 Changes

Adds DPC Prod environment to the new WAF config apply

## ℹ️ Context

We rolled out these changes to DEV, TEST, and SBX and through
troubleshooting in those environments, believe these changes to be ready
for the DPC Prod rollout.

## 🧪 Validation

Will verify traffic from accepted IP ranges is still allowed, and
blocked otherwise. Needs to be merged and applied after
https://github.com/CMSgov/dpc-ops/pull/741

--- a/.github/workflows/api-waf-apply.yml
+++ b/.github/workflows/api-waf-apply.yml
@@ -24,6 +24,9 @@ jobs:
       matrix:
         app: [bcda, dpc]
         env: [dev, test, sbx]
+        include:
+          - app: dpc
+            env: prod
     steps:
       - uses: actions/checkout@v4
       - uses: ./actions/setup-tfenv-terraform
