add ab2d to env matrix

--- a/.github/workflows/api-waf-apply.yml
+++ b/.github/workflows/api-waf-apply.yml
@@ -27,6 +27,10 @@ jobs:
         include:
           - app: dpc
             env: prod
+          - app: ab2d
+            env: dev
+          - app: ab2d
+            env: test
     steps:
       - uses: actions/checkout@v4
       - uses: ./actions/setup-tfenv-terraform
