--- a/.github/workflows/api-rds-plan.yml
+++ b/.github/workflows/api-rds-plan.yml
@@ -43,6 +43,7 @@ jobs:
         with:
           params: |
             TF_VAR_jenkins_security_group_id=/jenkins/security-group
+            TF_VAR_mgmt_vpc_cidr=/mgmt/vpc-cidr
       - run: terraform plan
         env:
           TF_VAR_app: ${{ matrix.app }}
