Add test, prod to new lambda plans

--- a/.github/workflows/api-waf-sync-plan.yml
+++ b/.github/workflows/api-waf-sync-plan.yml
@@ -33,7 +33,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        env: [dev]
+        env: [dev, test, prod]
         app: [bcda, dpc]
     env:
       TF_VAR_env: ${{ matrix.env }}
