BCDA-8626: Add supporting terraform for new BCDA lambda (#162)
## 🎫 Ticket

https://jira.cms.gov/browse/BCDA-8626

## 🛠 Changes

Add supporting terraform for new BCDA lambda (admin task Deny ACOs),
mostly copy pasted from similar lambdas.

## ℹ️ Context

New BCDA lambda.  Part of the move from jenkins.

<!-- If any of the following security implications apply, this PR must
not be merged without Stephen Walter's approval. Explain in this section
and add @SJWalter11 as a reviewer.
  - Adds a new software dependency or dependencies.
  - Modifies or invalidates one or more of our security controls.
  - Stores or transmits data that was not stored or transmitted before.
- Requires additional review of security implications for other reasons.
-->

## 🧪 Validation

Local terraform lint

--- a/.github/workflows/admin-aco-deny-apply.yml
+++ b/.github/workflows/admin-aco-deny-apply.yml
@@ -1,18 +1,18 @@
-name: api-waf-sync apply terraform
+name: Admin ACO Deny apply terraform
 
 on:
   push:
     branches:
       - main
     paths:
-      - .github/workflows/api-waf-sync-apply.yml
+      - .github/workflows/admin-aco-deny-apply.yml
       - terraform/modules/bucket/**
       - terraform/modules/key/**
       - terraform/modules/function/**
       - terraform/modules/queue/**
       - terraform/modules/subnets/**
       - terraform/modules/vpc/**
-      - terraform/services/api-waf-sync/**
+      - terraform/services/admin-aco-deny/**
   workflow_dispatch: # Allow manual trigger
 
 jobs:
@@ -23,28 +23,22 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./terraform/services/api-waf-sync
+        working-directory: ./terraform/services/admin-aco-deny
     strategy:
       fail-fast: false
       matrix:
-        env: [dev]
-        app: [bcda, dpc]
-        include:
-          - app: bcda
-            env: prod
-          - app: bcda
-            env: test
+        env: [dev, test, prod]
     env:
       TF_VAR_env: ${{ matrix.env }}
-      TF_VAR_app: ${{ matrix.app }}
+      TF_VAR_app: bcda
     steps:
       - uses: actions/checkout@v4
       - uses: ./actions/setup-tfenv-terraform
       - uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::${{ secrets.BCDA_ACCOUNT }}:role/delegatedadmin/developer/${{ matrix.app }}-${{ matrix.env }}-github-actions
+          role-to-assume: arn:aws:iam::${{ secrets.BCDA_ACCOUNT }}:role/delegatedadmin/developer/bcda-${{ matrix.env }}-github-actions
           aws-region: ${{ vars.AWS_REGION }}
-      - run: terraform init -reconfigure -backend-config=../../backends/${{ matrix.app }}-$TF_VAR_env.s3.tfbackend
+      - run: terraform init -reconfigure -backend-config=../../backends/bcda-$TF_VAR_env.s3.tfbackend
       - run: terraform apply -auto-approve
       - uses: slackapi/slack-github-action@v1.26.0
         if: ${{ failure() }}
