--- a/.github/workflows/admin-aco-deny-plan.yml
+++ b/.github/workflows/admin-aco-deny-plan.yml
@@ -1,16 +1,16 @@
-name: api-waf-sync plan terraform
+name: Admin ACO Deny plan terraform
 
 on:
   pull_request:
     paths:
-      - .github/workflows/api-waf-sync-plan.yml
+      - .github/workflows/admin-aco-deny-plan.yml
       - terraform/modules/bucket/**
       - terraform/modules/key/**
       - terraform/modules/function/**
       - terraform/modules/queue/**
       - terraform/modules/subnets/**
       - terraform/modules/vpc/**
-      - terraform/services/api-waf-sync/**
+      - terraform/services/admin-aco-deny/**
   workflow_dispatch: # Allow manual trigger
 
 jobs:
@@ -19,7 +19,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: ./actions/setup-tfenv-terraform
-      - run: terraform fmt -check -diff -recursive terraform/services/api-waf-sync
+      - run: terraform fmt -check -diff -recursive terraform/services/admin-aco-deny
 
   terraform-plan:
     needs: check-terraform-fmt
@@ -29,21 +29,20 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./terraform/services/api-waf-sync
+        working-directory: ./terraform/services/admin-aco-deny
     strategy:
       fail-fast: false
       matrix:
         env: [dev, test, prod]
-        app: [bcda, dpc]
     env:
       TF_VAR_env: ${{ matrix.env }}
-      TF_VAR_app: ${{ matrix.app }}
+      TF_VAR_app: bcda
     steps:
       - uses: actions/checkout@v4
       - uses: ./actions/setup-tfenv-terraform
       - uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::${{ secrets.BCDA_ACCOUNT }}:role/delegatedadmin/developer/${{ matrix.app }}-${{ matrix.env }}-github-actions
+          role-to-assume: arn:aws:iam::${{ secrets.BCDA_ACCOUNT }}:role/delegatedadmin/developer/bcda-${{ matrix.env }}-github-actions
           aws-region: ${{ vars.AWS_REGION }}
-      - run: terraform init -reconfigure -backend-config=../../backends/${{ matrix.app }}-$TF_VAR_env.s3.tfbackend
+      - run: terraform init -reconfigure -backend-config=../../backends/bcda-$TF_VAR_env.s3.tfbackend
       - run: terraform plan
