add ab2d sandbox to env matrix

--- a/.github/workflows/api-waf-apply.yml
+++ b/.github/workflows/api-waf-apply.yml
@@ -22,15 +22,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        app: [bcda, dpc]
+        app: [ab2d, bcda, dpc]
         env: [dev, test, sbx]
         include:
           - app: dpc
             env: prod
-          - app: ab2d
-            env: dev
-          - app: ab2d
-            env: test
     steps:
       - uses: actions/checkout@v4
       - uses: ./actions/setup-tfenv-terraform
