PLT-634: API WAF - Add BCDA PROD to environment matrix (#150)
## 🎫 Ticket

https://jira.cms.gov/browse/PLT-634

## 🛠 Changes

Adds BCDA PROD to environment matrix for the shared WAF module rollout.

## ℹ️ Context

This will enable the WAF in the PROD environment and filter all incoming
traffic.

## 🧪 Validation

After https://github.com/CMSgov/bcda-ops/pull/1128 is merged, we should
be able to merge this PR to enable the WAF module in production. I'll
then check for traffic/connection issues, and fail forward (create new
PRs to address) if necessary.

--- a/.github/workflows/api-waf-apply.yml
+++ b/.github/workflows/api-waf-apply.yml
@@ -27,10 +27,8 @@ jobs:
         include:
           - app: dpc
             env: prod
-          - app: ab2d
-            env: dev
-          - app: ab2d
-            env: test
+          - app: bcda
+            env: prod
     steps:
       - uses: actions/checkout@v4
       - uses: ./actions/setup-tfenv-terraform
