--- a/.github/workflows/admin-create-aco-creds-apply.yml
+++ b/.github/workflows/admin-create-aco-creds-apply.yml
@@ -1,18 +1,18 @@
-name: Admin ACO Deny apply terraform
+name: Admin Create ACO Credentials apply terraform
 
 on:
   push:
     branches:
       - main
     paths:
-      - .github/workflows/admin-aco-deny-apply.yml
+      - .github/workflows/admin-create-aco-creds-apply.yml
       - terraform/modules/bucket/**
       - terraform/modules/key/**
       - terraform/modules/function/**
       - terraform/modules/queue/**
       - terraform/modules/subnets/**
       - terraform/modules/vpc/**
-      - terraform/services/admin-aco-deny/**
+      - terraform/services/admin-create-aco-creds/**
   workflow_dispatch: # Allow manual trigger
 
 jobs:
@@ -23,7 +23,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./terraform/services/admin-aco-deny
+        working-directory: ./terraform/services/admin-create-aco-creds
     strategy:
       fail-fast: false
       matrix:
