--- a/.github/workflows/api-rds-plan.yml
+++ b/.github/workflows/api-rds-plan.yml
@@ -27,8 +27,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        app: [ab2d, bcda]
+        app: [ab2d]
         env: [dev, test, sbx, prod]
+        include:
+          - app: bcda
+            env: test
     steps:
       - uses: actions/checkout@v4
       - uses: ./actions/setup-tfenv-terraform
