PLT-697:Apply shared terraform for database to BCDA test (#164)
## 🎫 Ticket

[PLT-697](https://jira.cms.gov/browse/PLT-697)

## 🛠 Changes

BCDA was added to app in api-res-plan workflow

## ℹ️ Context

switching out management of database infra from bcda-ops to platform

## 🧪 Validation

See terraform plans in checks.

---------

Co-authored-by: Maboh Christopher <chris.maboh@aquia.io>
Co-authored-by: ildesenesence <31672538+ildesenesence@users.noreply.github.com>

--- a/.github/workflows/api-rds-plan.yml
+++ b/.github/workflows/api-rds-plan.yml
@@ -29,6 +29,9 @@ jobs:
       matrix:
         app: [ab2d]
         env: [dev, test, sbx, prod]
+        include:
+          - app: bcda
+            env: test
     steps:
       - uses: actions/checkout@v4
       - uses: ./actions/setup-tfenv-terraform
