PLT-785: Add AB2D Sandbox to WAF environments (#170)
## 🎫 Ticket

https://jira.cms.gov/browse/PLT-785

## 🛠 Changes

Adds AB2D sandbox to the list of environments we deploy the shared WAF
terraform to.

## ℹ️ Context

We want to test the changes in all environments before we rollout to
production. The new shared terraform will bring all the teams to one
consistent state

## 🧪 Validation

AB2D sandbox access should remain as usual.

--- a/.github/workflows/api-waf-apply.yml
+++ b/.github/workflows/api-waf-apply.yml
@@ -23,12 +23,14 @@ jobs:
       fail-fast: false
       matrix:
         app: [bcda, dpc]
-        env: [dev, test, sbx]
+        env: [dev, test, sbx, prod]
         include:
-          - app: dpc
-            env: prod
-          - app: bcda
-            env: prod
+          - app: ab2d
+            env: dev
+          - app: ab2d
+            env: test
+          - app: ab2d
+            env: sbx
     steps:
       - uses: actions/checkout@v4
       - uses: ./actions/setup-tfenv-terraform
