add ci token fetch

--- a/.github/workflows/ab2d-ip-sets-sync.yml
+++ b/.github/workflows/ab2d-ip-sets-sync.yml
@@ -18,19 +18,30 @@ jobs:
         app: [ab2d]
         env: [dev, test]
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/checkout@v4
+      - name: Checkout Platform Repository
+        uses: actions/checkout@v4
+      - name: Get AWS params
+        uses: cmsgov/ab2d-bcda-dpc-platform/actions/aws-params-env-action@main
+        env:
+          AWS_REGION: ${{ vars.AWS_REGION }}
+        with:
+          params: |
+            OPS_GITHUB_TOKEN=/ci/github/token
+      - name: Checkout Private Repository
+        uses: actions/checkout@v4
         with:
           repository: CMSgov/cdap-private
           ref: 'main'
           sparse-checkout: ip_sets/ab2d/allowed_ips.txt
           sparse-checkout-cone-mode: false
-          token: ${{ env.GITHUB_TOKEN }}
-      - uses: aws-actions/configure-aws-credentials@v4
+          token: ${{ env.OPS_GITHUB_TOKEN }}
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: arn:aws:iam::${{ secrets[format('{0}_{1}_ACCOUNT', matrix.app, matrix.env)] }}:role/delegatedadmin/developer/${{ matrix.app }}-${{ matrix.env }}-github-actions
           aws-region: ${{ vars.AWS_REGION }}
-      - run: bash waf-ip-set-sync.sh
+      - name: Run WAF Sync Script
+        run: bash waf-ip-set-sync.sh
         env:
           APP: ${{ matrix.app }}
           ENV: ${{ matrix.env }}
