--- a/.github/workflows/ab2d-ip-sets-sync.yml
+++ b/.github/workflows/ab2d-ip-sets-sync.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: self-hosted
     defaults:
       run:
-        working-directory: ./scripts
+        working-directory: scripts
     strategy:
       matrix:
         app: [ab2d]
