--- a/.github/workflows/ab2d-ip-sets-sync.yml
+++ b/.github/workflows/ab2d-ip-sets-sync.yml
@@ -12,6 +12,7 @@ jobs:
     runs-on: self-hosted
     defaults:
       run:
+        shell: bash
         working-directory: scripts
     strategy:
       matrix:
@@ -40,6 +41,8 @@ jobs:
         with:
           role-to-assume: arn:aws:iam::${{ secrets[format('{0}_{1}_ACCOUNT', matrix.app, matrix.env)] }}:role/delegatedadmin/developer/${{ matrix.app }}-${{ matrix.env }}-github-actions
           aws-region: ${{ vars.AWS_REGION }}
+      - name: PWD and LS
+        run: pwd && ls -alh
       - name: Run WAF Sync Script
         run: bash waf-ip-set-sync.sh
         env:
