--- a/.github/workflows/ab2d-ip-sets-sync.yml
+++ b/.github/workflows/ab2d-ip-sets-sync.yml
@@ -20,6 +20,8 @@ jobs:
     steps:
       - name: Checkout Platform Repository
         uses: actions/checkout@v4
+        with:
+          path: main
       - name: Get AWS params
         uses: cmsgov/ab2d-bcda-dpc-platform/actions/aws-params-env-action@main
         env:
@@ -34,6 +36,7 @@ jobs:
           ref: 'main'
           sparse-checkout: ip_sets/ab2d/allowed_ips.txt
           sparse-checkout-cone-mode: false
+          path: ips
           token: ${{ env.OPS_GITHUB_TOKEN }}
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
