--- a/.github/workflows/ab2d-ip-sets-sync.yml
+++ b/.github/workflows/ab2d-ip-sets-sync.yml
@@ -35,7 +35,7 @@ jobs:
           sparse-checkout: |
             ip-sets/ab2d/allowed_ips.txt
           sparse-checkout-cone-mode: false
-          path: ./scripts
+          path: ./scripts/temp
           token: ${{ env.OPS_GITHUB_TOKEN }}
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
@@ -43,7 +43,7 @@ jobs:
           role-to-assume: arn:aws:iam::${{ secrets[format('{0}_{1}_ACCOUNT', matrix.app, matrix.env)] }}:role/delegatedadmin/developer/${{ matrix.app }}-${{ matrix.env }}-github-actions
           aws-region: ${{ vars.AWS_REGION }}
       - name: PWD and LS
-        run: pwd && ls -alh; ls scripts; head -n 2 scripts/allowed_ips.txt
+        run: pwd && ls -alh; ls scripts; head -n 2 scripts/temp/ip-sets/ab2d/allowed_ips.txt
       - name: Run WAF Sync Script
         working-directory: scripts
         run: bash waf-ip-set-sync.sh
