--- a/.github/workflows/ab2d-ip-sets-sync.yml
+++ b/.github/workflows/ab2d-ip-sets-sync.yml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: CMSgov/cdap-private
-          ref: 'main'
+          ref: 'gfreeman_PLT-508_remove_problematic_cidrs'
           sparse-checkout: |
             ip-sets/ab2d/allowed_ips.txt
           sparse-checkout-cone-mode: false
