--- a/.github/workflows/ab2d-ip-sets-sync.yml
+++ b/.github/workflows/ab2d-ip-sets-sync.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       matrix:
         app: [ab2d]
-        env: [dev, test]
+        env: [dev, test, prod]
     steps:
       - name: Checkout Platform Repository
         uses: actions/checkout@v4
