--- a/.github/workflows/api-waf-apply.yml
+++ b/.github/workflows/api-waf-apply.yml
@@ -22,15 +22,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        app: [bcda, dpc]
+        app: [ab2d, bcda, dpc]
         env: [dev, test, sbx, prod]
-        include:
-          - app: ab2d
-            env: dev
-          - app: ab2d
-            env: test
-          - app: ab2d
-            env: sbx
     steps:
       - uses: actions/checkout@v4
       - uses: ./actions/setup-tfenv-terraform
