--- a/.github/workflows/external-services-ip-sets-sync.yml
+++ b/.github/workflows/external-services-ip-sets-sync.yml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: CMSgov/cdap-private
-          ref: 'main'
+          ref: 'jscott/PLT-506'
           sparse-checkout:
             ip-sets/external-services/allowed_ips.txt
           sparse-checkout-cone-mode: false
