Expanding matrix strategy to cover all envs, commenting out CLI sync command to test.

--- a/.github/workflows/external-services-ip-sets-sync.yml
+++ b/.github/workflows/external-services-ip-sets-sync.yml
@@ -15,8 +15,8 @@ jobs:
         shell: bash
     strategy:
       matrix:
-        app: [ab2d]
-        env: [test]
+        env: [dev, test, prod]
+        app: [ab2d, bcda, dpc]
     steps:
       - name: Checkout Platform Repository
         uses: actions/checkout@v4
