--- a/.github/workflows/external-services-ip-sets-sync.yml
+++ b/.github/workflows/external-services-ip-sets-sync.yml
@@ -15,8 +15,8 @@ jobs:
         shell: bash
     strategy:
       matrix:
-        env: [dev, test, prod]
-        app: [ab2d, bcda, dpc]
+        env: [test, dev]
+        app: [ab2d]
     steps:
       - name: Checkout Platform Repository
         uses: actions/checkout@v4
