PLT-564: Apply shared terraform for database to BCDA dev, sbx, prod  (#194)
## 🎫 Ticket

https://jira.cms.gov/browse/PLT-564

## 🛠 Changes

set RDS password for manual reset/update

## ℹ️ Context

manually set the password for all apps

<!-- If any of the following security implications apply, this PR must
not be merged without Stephen Walter's approval. Explain in this section
and add @SJWalter11 as a reviewer.
  - Adds a new software dependency or dependencies.
  - Modifies or invalidates one or more of our security controls.
  - Stores or transmits data that was not stored or transmitted before.
- Requires additional review of security implications for other reasons.
-->

## 🧪 Validation

<!-- How were the changes verified? Did you fully test the acceptance
criteria in the ticket? Provide reproducible testing instructions and
screenshots if applicable. -->

---------

Co-authored-by: Maboh Christopher <chris.maboh@aquia.io>

--- a/.github/workflows/api-rds-apply.yml
+++ b/.github/workflows/api-rds-apply.yml
@@ -21,15 +21,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        app: [ab2d]
+        app: [ab2d, bcda]
         env: [dev, test, sbx, prod]
-        include:
-          - app: bcda
-            env: test
-          - app: bcda
-            env: dev
-          - app: bcda
-            env: sbx
     steps:
       - uses: actions/checkout@v4
       - uses: ./actions/setup-tfenv-terraform
