add legacy variable input to tfstate apply and plan workflows

--- a/.github/workflows/tfstate-apply.yml
+++ b/.github/workflows/tfstate-apply.yml
@@ -1,6 +1,10 @@
 name: Terraform apply for tfstate
 
 on:
+  inputs:
+    legacy:
+      required: true
+      type: boolean
   push:
     branches:
       - main
