PLT-565: Apply shared terraform for database to DPC test, dev, sbx, prod  (#202)
## 🎫 Ticket

https://jira.cms.gov/browse/PLT-565

## 🛠 Changes

RDS shared terraform for 3 APIs configured and imported to terraform
state

## ℹ️ Context

Apply shared terraform for database to DPC test, dev, sbx, prod

<!-- If any of the following security implications apply, this PR must
not be merged without Stephen Walter's approval. Explain in this section
and add @SJWalter11 as a reviewer.
  - Adds a new software dependency or dependencies.
  - Modifies or invalidates one or more of our security controls.
  - Stores or transmits data that was not stored or transmitted before.
- Requires additional review of security implications for other reasons.
-->

## 🧪 Validation

GitHub action workflow

---------

Co-authored-by: Maboh Christopher <chris.maboh@aquia.io>

--- a/.github/workflows/api-rds-plan.yml
+++ b/.github/workflows/api-rds-plan.yml
@@ -27,11 +27,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        app: [ab2d, bcda]
+        app: [ab2d, bcda, dpc]
         env: [dev, test, sbx, prod]
-        include:
-          - app: dpc
-            env: test
     steps:
       - uses: actions/checkout@v4
       - uses: ./actions/setup-tfenv-terraform
