Renaming dir, adding migrate_secrets.py.

--- a/tools/migrate_parameters_and_secrets/settings.ini
+++ b/tools/migrate_parameters_and_secrets/settings.ini
@@ -1,5 +1,5 @@
 [SOURCE.ACCOUNT.CREDENTIALS]
-AWS_ACCOUNT_ID:
+AWS_ACCOUNT_ID: 
 AWS_ACCESS_KEY_ID:
 AWS_SECRET_ACCESS_KEY:
 AWS_SESSION_TOKEN:
@@ -17,8 +17,8 @@ AWS_SECRET_ACCESS_KEY:
 AWS_SESSION_TOKEN:
 
 [PARAMETER_PREFIX_LISTS]
-BCDA-NON-PROD-ACCOUNT-EXCLUDE-LIST: /opensbx /prod /sbx /prod-sbx /github-action-runners /github-runner cms-cloud
-BCDA-PROD-ACCOUNT-EXCLUDE-LIST: /dev /test cms-cloud
+BCDA-NON-PROD-ACCOUNT-EXCLUDE-LIST: cms-cloud
+BCDA-PROD-ACCOUNT-EXCLUDE-LIST: cms-cloud
 
 [MISCELLANEOUS]
 DRY-RUN: true
