add use_lockfile to backend s3. Upgrade to terraform 1.10 to support use_lockfile = true in tfstate/terraform

--- a/.github/workflows/github-actions-runner-apply.yml
+++ b/.github/workflows/github-actions-runner-apply.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           role-to-assume: arn:aws:iam::${{ secrets.BCDA_ACCOUNT }}:role/delegatedadmin/developer/bcda-mgmt-github-actions
           aws-region: ${{ vars.AWS_REGION }}
-      - run: terraform init -backend-config=../../backends/bcda-mgmt.s3.tfbackend
+      - run: terraform init -backend-config=../../backends/bcda-test.s3.tfbackend
       - uses: cmsgov/ab2d-bcda-dpc-platform/actions/aws-params-env-action@main
         env:
           AWS_REGION: ${{ vars.AWS_REGION }}
