--- a/.github/workflows/admin-create-aco-creds-plan.yml
+++ b/.github/workflows/admin-create-aco-creds-plan.yml
@@ -33,7 +33,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        env: [dev, test, sbx, prod]
+        env: [dev, test, sandbox, prod]
     env:
       TF_VAR_env: ${{ matrix.env }}
       TF_VAR_app: bcda
