Revert "update sbx to sandbox"
This reverts commit bf62750de586009a1fec9957d2bc2febdb27eb28.

--- a/.github/workflows/admin-aco-deny-apply.yml
+++ b/.github/workflows/admin-aco-deny-apply.yml
@@ -27,7 +27,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        env: [dev, test, sandbox, prod]
+        env: [dev, test, sbx, prod]
     env:
       TF_VAR_env: ${{ matrix.env }}
       TF_VAR_app: bcda
