--- a/.github/workflows/admin-create-group-apply.yml
+++ b/.github/workflows/admin-create-group-apply.yml
@@ -27,7 +27,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        env: [dev, test, sandbox, prod]
+        env: [dev, test, sbx, prod]
     env:
       TF_VAR_env: ${{ matrix.env }}
       TF_VAR_app: bcda
