--- a/.github/workflows/github-actions-role-plan.yml
+++ b/.github/workflows/github-actions-role-plan.yml
@@ -28,7 +28,7 @@ jobs:
       fail-fast: false
       matrix:
         app: [ab2d, bcda, dpc]
-        env: [dev, test, sandbox, prod, mgmt]
+        env: [dev, test, sbx, prod, mgmt]
     steps:
       - uses: actions/checkout@v4
       - uses: ./actions/setup-tfenv-terraform
