--- a/.github/workflows/quicksight-apply.yml
+++ b/.github/workflows/quicksight-apply.yml
@@ -34,7 +34,7 @@ jobs:
       fail-fast: false
       matrix:
 #        app: [ab2d, bcda, dpc]
-#        env: [dev, test, sandbox, prod]
+#        env: [dev, test, sbx, prod]
         app: [dpc]
         env: [dev, test]
     steps:
