--- a/.github/workflows/snyk-integration-apply.yml
+++ b/.github/workflows/snyk-integration-apply.yml
@@ -22,7 +22,7 @@ jobs:
       fail-fast: false
       matrix:
         app: [ab2d]
-        env: [mgmt, dev, test, sandbox, prod]
+        env: [mgmt, dev, test, sbx, prod]
         include:
           - app: bcda
             env: mgmt
