Check for sha256sum

--- a/.github/workflows/github-actions-role-plan.yml
+++ b/.github/workflows/github-actions-role-plan.yml
@@ -45,6 +45,8 @@ jobs:
             account: legacy
     steps:
       - uses: actions/checkout@v4
+      - run: |
+        hash sha256sum
       - uses: ./actions/setup-tfenv-terraform
       - uses: aws-actions/configure-aws-credentials@v4
         with:
