Switch runner project

--- a/.github/workflows/github-actions-role-gf.yml
+++ b/.github/workflows/github-actions-role-gf.yml
@@ -21,7 +21,7 @@ jobs:
     permissions:
       contents: read
       id-token: write
-    runs-on: codebuild-runner-cdap-container-${{github.run_id}}-${{github.run_attempt}}
+    runs-on: codebuild-cdap-${{github.run_id}}-${{github.run_attempt}}
     defaults:
       run:
         working-directory: ./terraform/services/github-actions-role
