Use single quotes for conditional

--- a/.github/workflows/tf-github-actions-role.yml
+++ b/.github/workflows/tf-github-actions-role.yml
@@ -55,4 +55,4 @@ jobs:
           TF_VAR_env: ${{ matrix.env }}
           TF_VAR_legacy: "false"
       - run: terraform apply -auto-approve tf.plan
-        if: ${{ inputs.apply == true }} || ${{ github.ref == "refs/heads/main" }}
+        if: ${{ inputs.apply == true }} || ${{ github.ref == 'refs/heads/main' }}
