Uncomment matrix to run workflow on all environments

--- a/.github/workflows/tf-github-actions-role.yml
+++ b/.github/workflows/tf-github-actions-role.yml
@@ -35,13 +35,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        #app: [ab2d, bcda, dpc]
-        #env: [dev, test, sandbox, prod]
-        #include:
-        #  - app: cdap
-        #    env: mgmt
-        app: [cdap]
-        env: [mgmt]
+        app: [ab2d, bcda, dpc]
+        env: [dev, test, sandbox, prod]
+        include:
+          - app: cdap
+            env: mgmt
     steps:
       - uses: actions/checkout@v4
       - uses: ./actions/setup-tfenv-terraform
