temporarily remove ab2d test from matrix while AWS ticket is active for KMS key issue

--- a/.github/workflows/api-rds-apply.yml
+++ b/.github/workflows/api-rds-apply.yml
@@ -23,6 +23,9 @@ jobs:
       matrix:
         app: [ab2d, bcda, dpc]
         env: [dev, test, sbx, prod]
+        exclude:
+          - app: ab2d
+            env: test
     steps:
       - uses: actions/checkout@v4
       - uses: ./actions/setup-tfenv-terraform
