PLT-1040 Initial changes for dpc dev greenfield env setup (#221)
## 🎫 Ticket

https://jira.cms.gov/browse/PLT-1040

## 🛠 Changes

Changes necessary for greenfield DPC dev environment setup

## ℹ️ Context

For pairing with DPC engineers on greenfield cutover process

## 🧪 Validation

We should see everything green :)

---------

Co-authored-by: Michael J Burling <michael.burling@cms.hhs.gov>

--- a/.github/workflows/api-rds-plan.yml
+++ b/.github/workflows/api-rds-plan.yml
@@ -29,6 +29,10 @@ jobs:
       matrix:
         app: [ab2d, bcda, dpc]
         env: [dev, test, sbx, prod]
+        # NOTE: Temporary test-ab2d exclusion until CLDSPT-84850 is resolved
+        exclude:
+          - app: ab2d
+            env: test
     steps:
       - uses: actions/checkout@v4
       - uses: ./actions/setup-tfenv-terraform
