Add vpc module to paths

--- a/.github/workflows/tf-security-groups.yml
+++ b/.github/workflows/tf-security-groups.yml
@@ -5,6 +5,7 @@ on:
   push:
     paths:
       - .github/workflows/tf-security-groups.yml
+      - terraform/modules/vpc/**
       - terraform/services/security-groups/**
   workflow_dispatch:
     inputs:
